change package name to `common`

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "eidng8/php-common",
+  "name": "eidng8/common",
   "description": "Commonly used shortcuts and helpers",
   "license": "MIT",
   "type": "library",
