--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "php": ">7.0"
+    "php": ">7.0",
+    "nesbot/carbon": "^1.29"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.1",
