--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": ">7.0",
-    "nesbot/carbon": "^1.29"
+    "nesbot/carbon": "~1.21"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.1",
